# installer-analyzer

./: .gitignore  .goreleaser.yml  .llvm-cov.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_zh.md  build.rs  coverage.lcov  create-issues.ps1  test.html  test_improved_template.html  test_new_template.html  test_web_template.html
.cargo/: config.toml
.github/workflows/: chocolatey-test.yml  ci.yml  release-please.yml  release.yml
chocolatey/: README.md  installer-analyzer.nuspec  validate-package.ps1
chocolatey/tools/: chocolateybeforemodify.ps1  chocolateyinstall.ps1  chocolateyuninstall.ps1
docs/: AUTO_UPDATE_GUIDE.md  AUTO_UPDATE_GUIDE_zh.md  CHOCOLATEY_SETUP.md  COVERAGE_PLAN.md  PGO_BUILD.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.ts
pgo-data/: default_10242374581407076863_0.profraw  default_10354640440289832388_0.profraw  default_11318491502937464606_0.profraw  default_13742988431847716656_0.profraw  default_3442498962155414792_0.profraw  default_3634780314505363917_0.profraw  default_7521918709738200720_0.profraw  default_7966445878334170397_0.profraw  default_8442145421052540466_0.profraw  default_9189330527734926555_0.profraw  default_9281803260223066732_0.profraw  default_9525407029473004728_0.profraw
scripts/: build-pgo-simple.ps1  build-pgo.ps1  build.bat  build.sh  coverage-ci.ps1  coverage.ps1  test.ps1  validate-ci.ps1
src/: lib.rs  main.rs
src/analyzers/: common.rs  mod.rs
src/api/: mod.rs
src/cli/: commands.rs  mod.rs  output.rs
src/core/: error.rs  mod.rs  types.rs
src/monitoring/: mod.rs
src/reporting/: generator.rs  mod.rs  templates.rs
src/sandbox/: controller.rs  mod.rs
src/updater/: client.rs  download.rs  (+3 more)
templates/: report.html
tests/: cli_tests.rs  format_specific_tests.rs  lib.rs  output_tests.rs  performance_tests.rs  real_data_tests.rs  updater_tests.rs
(+36 files in other folders)
